@@ -145,6 +145,7 @@ set(otter_src
 	src/ui/preferences/SearchKeywordDelegate.cpp
 	src/ui/preferences/ShortcutsProfileDialog.cpp
 	src/ui/toolbars/ZoomWidget.cpp
+	src/modules/backends/web/qtwebkit/LoadPluginWidget.cpp
 	src/modules/backends/web/qtwebkit/QtWebKitWebBackend.cpp
 	src/modules/backends/web/qtwebkit/QtWebKitWebPage.cpp
 	src/modules/backends/web/qtwebkit/QtWebKitWebPluginFactory.cpp
@@ -161,7 +162,6 @@ set(otter_src
 	src/modules/windows/web/ImagePropertiesDialog.cpp
 	src/modules/windows/web/ProgressBarWidget.cpp
 	src/modules/windows/web/WebContentsWidget.cpp
-	src/modules/windows/web/qtwebkit/LoadPluginWidget.cpp
 )
 
 qt5_add_resources(otter_res
