@@ -1,4 +1,5 @@
 0.9.04 (--.-.201-):
+- allow to load plugins on demand;
 - added Go to Page dialog (F2);
 
 0.9.03 (01.11.2014):
